--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,10 @@ html, body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url('./assets/dazai.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  transition: background-image 0.3s ease;
 }
 
 .content {
